# Ivan-Bylanovich

./: README.md
ABP-Bilanovich-main/: CMakeLists.txt  Lab_10.cpp  Lab_8.cpp  Lab_9.cpp  main.cpp
ABP-Bilanovich-main/Lab_1/: CMakeLists.txt  Lab_1.cpp
ABP-Bilanovich-main/Lab_2_1/: CMakeLists.txt  Lab_2_1.cpp
ABP-Bilanovich-main/Lab_2_2/: CMakeLists.txt  Lab_2_2.cpp
ABP-Bilanovich-main/Lab_3/: CMakeLists.txt  Lab_3.cpp
ABP-Bilanovich-main/Lab_4/: CMakeLists.txt  Lab_4.cpp
ABP-Bilanovich-main/Lab_5/: CMakeLists.txt  Lab_5.cpp
ABP-Bilanovich-main/Lab_6/: CMakeLists.txt  Lab_6.cpp
ABP-Bilanovich-main/Lab_7/: CMakeLists.txt  Lab_7.cpp
lab_1/: lab_1.cpp
